Cinnamon popupmenu - Fix selection highlight overlapping menu border

--- a/common/cinnamon/sass/_common.scss
+++ b/common/cinnamon/sass/_common.scss
@@ -289,7 +289,7 @@ StScrollBar {
     }
   }
 
-  .popup-menu-content { padding: 1em 0em 1em 0em; }
+  .popup-menu-content { padding: 1em 1px; }
   .popup-menu-item {
     padding: .4em 1.75em;
     spacing: 1em;
